--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/content/ad/add.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/content/ad/add.html
@@ -1,132 +1,119 @@
-<form th:action="@{/admin/m/ext/ad/add.gsp}" id="addForm" role="form" class="form-horizontal" action="#" method="post">
-	<div class="modal-header">
-		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-		<h4 class="modal-title">新增广告信息</h4>
-	</div>
-	<div class="modal-body">
-		<div class="row">
-			<div class="col-md-12">
-				<div class="form-group">
-					<label class="col-md-3 control-label">广告位<label class="text-danger">*</label>：
-					</label>
-					<div class="col-md-7">
-						<select class="form-control" name="adSlotId">
-							<option th:each="data : ${result}" th:value="${data.id}" th:text="${data.slotName}"></option>
-						</select>
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-md-3 control-label">广告名称<label class="text-danger">*</label>：
-					</label>
-					<div class="col-md-7">
-						<input name="adName" placeholder="请输入广告名称" type="text" class="form-control" />
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-md-3 control-label">开始时间<label class="text-danger date">*</label>：
-					</label>
-					<div class="col-md-7">
-						<div class="input-group date">
-							<input name="beginTime" readOnly="true" type="text" class="form-control" /> <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-						</div>
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-md-3 control-label date">结束时间：</label>
-					<div class="col-md-7">
-						<div class="input-group date">
-							<input name="endTime" readOnly="true" type="text" class="form-control" /> <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-						</div>
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-md-3 control-label">广告url<label class="text-danger">*</label>：
-					</label>
-					<div class="col-md-7">
-						<input name="adUrl" placeholder="请输入广告url" type="text" class="form-control" />
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-md-3 control-label">广告文字：</label>
-					<div class="col-md-7">
-						<input name="adText" placeholder="请输入广告文字" type="text" class="form-control" />
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-md-3 control-label">广告代码<label class="text-danger">*</label>：
-					</label>
-					<div class="col-md-7">
-						<input name="adScript" placeholder="请输入广告代码" type="text" class="form-control" />
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-md-3 control-label">广告图片：</label>
-					<div class="col-md-7" id="adIimageDiv"></div>
-				</div>
-				<div class="form-group">
-					<label class="col-md-3 control-label">广告flash：</label>
-					<div class="col-md-7" id="adFlashDiv"></div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="modal-footer">
-		<button class="btn btn-primary" type="submit">
-			<strong>提 交</strong>
-		</button>
-		<button type="button" class="btn btn-default" data-dismiss="modal">
-			<strong>关 闭</strong>
-		</button>
-	</div>
-</form>
+<!DOCTYPE html>
+<html lang="zh-cn" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<head>
+<title th:text="|#{customer.systemTitle}-内容管理-广告管理|">图灵谷</title>
+<div th:replace="fragments/head_admin">head</div>
+<!--/***** 当前页css  start *****/-->
+<!--/***** 当前页css  end *****/-->
+</head>
+<body>
+    <div class="layui-layout layui-layout-admin">
+        <div th:replace="fragments/nav_admin">导航栏</div>
+        <div th:replace="fragments/menu_admin::menu(parent=content,child=ad)">菜单栏</div>
+        <!--/*******内容*******/-->
+        <div class="layui-body">
+            <div class="layui-main">
+                <!--/***** 面包屑 *****/-->
+                <div class="layui-elem-quote" style="margin-top: 10px;">
+                    <span class="layui-breadcrumb"> <a><cite>内容管理</cite></a><a th:href="@{/admin/m/ext/add/list.gsp}">广告管理</a><a><cite>新增</cite></a>
+                    </span>
+                </div>
+                <!--/*******操作*******/-->
+                <form th:action="@{/admin/m/ext/ad/add.gsp}" id="addForm" role="form" method="post" class="layui-form">
+                    <fieldset class="layui-elem-field layui-field-title">
+                        <legend>广告管理-新增</legend>
+                    </fieldset>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">广告位：<span style="color: red">*</span></label>
+                        <div class="layui-input-block">
+                            <select id="typeId" name="adSlotId" lay-verify="required"><option th:if="${result.size()<=0}" value="">暂无</option>
+                                <option th:each="data : ${result}" th:value="${data.id}" th:text="${data.slotName}"></option></select>
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">广告名称：<span style="color: red">*</span></label>
+                        <div class="layui-input-block">
+                            <input type="text" name="adName" required lay-verify="adName" placeholder="请输入广告名称" autocomplete="off" class="layui-input">
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">开始时间：<span style="color: red">*</span></label>
+                        <div class="layui-input-block">
+                            <input type="text" name="beginTime" lay-verify="date" placeholder="yyyy-mm-dd" autocomplete="off" class="layui-input" onclick="layui.laydate({elem: this})">
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">结束时间：</label>
+                        <div class="layui-input-block">
+                            <input type="text" name="endTime" lay-verify="date" placeholder="yyyy-mm-dd" autocomplete="off" class="layui-input" onclick="layui.laydate({elem: this})">
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">广告url：<span style="color: red">*</span></label>
+                        <div class="layui-input-block">
+                            <input type="text" name="adUrl" required lay-verify="url" placeholder="请输入广告url" autocomplete="off" class="layui-input">
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">广告文字：</label>
+                        <div class="layui-input-block">
+                            <input type="text" name="adText" lay-verify="adText" placeholder="请输入广告文字" autocomplete="off" class="layui-input">
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">广告代码：<span style="color: red">*</span></label>
+                        <div class="layui-input-block">
+                            <input type="text" name="adScript" required lay-verify="adText" placeholder="请输入广告代码" autocomplete="off" class="layui-input">
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">广告图片:</label>
+                        <div class="layui-input-block">
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">广告flash:</label>
+                        <div class="layui-input-block">
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <div class="layui-input-block">
+                            <button class="layui-btn" lay-submit="" lay-filter="submit">立即提交</button>
+                            <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div th:replace="fragments/footer_admin">底部版权信息等</div>
+    </div>
+</body>
+<div th:replace="fragments/import_js_admin">引入js</div>
+<!--/***** 当前页js start *****/-->
 <script th:inline="javascript">
-    $('.date').datepicker({
-        todayBtn : "linked",
-        keyboardNavigation : false,
-        forceParse : false,
-        initialDate : new Date(),
-        altField : '#actualDate',
-        calendarWeeks : true,
-        autoclose : true
-    });
     /*<![CDATA[*/
-    $(function() {
-        var adImageRecord = {
-            innerType : 1,
-            fieldName : 'adIimage',
-            valueStr : ''
-        };
-        var adIimage = createImagUpload(adImageRecord);
-        $('#adIimageDiv').append(adIimage);
-        var adFlashRecord = {
-            innerType : 1,
-            fieldName : 'adFlash',
-            valueStr : ''
-        };
-        var adFlash = createImagUpload(adFlashRecord);
-        $('#adFlashDiv').append(adFlash);
-        var rules = {
-            adName : {
-                required : true,
-                maxlength : 20
-            },
-            adUrl : {
-                required : true,
-                url : true,
-                maxlength : 40
-            },
-            adText : {
-                maxlength : 50
-            },
-            adScript : {
-                required : true,
-                maxlength : 20
+    var form = layui.form();
+    var $ = layui.jquery;
+  //自定义验证规则
+    var rules = {
+        adName : function(value) {
+            if (value.length < 1 || value.length > 20) {
+                return '广告名称在1~20个字符之间';
+            }
+        },
+        adText : function(value) {
+            if (value.length > 50) {
+                return '广告文字不能超过50个字符之间';
+            }
+        },
+        adScript : function(value) {
+            if (value.length < 1 || value.length > 20) {
+                return '广告代码必填并且不能超过20个字符';
             }
         }
-        var messages = {
-
-        }
-        myTable.add('commonWin', 'addForm', rules, messages);
-    });
+    };
+    form.verify(rules);
     /*]]>*/
 </script>
+<!--/***** 当前页js end *****/-->
+</html>
