--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/content/friendlink/list.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/content/friendlink/list.html
@@ -1,159 +1,98 @@
 <!DOCTYPE html>
 <html lang="zh-cn" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-<title th:text="|#{customer.systemTitle}-图灵谷-站点管理-广告位管理|">图灵谷</title>
+<title th:text="|#{customer.systemTitle}-内容管理-友情链接|">图灵谷</title>
 <div th:replace="fragments/head_admin">head</div>
 <!--/***** 当前页css  start *****/-->
-<link rel="stylesheet" type="text/css" th:href="@{/resources/vendor/tgCube/css/libs/dataTables.fixedHeader.css}" />
-<link rel="stylesheet" type="text/css" th:href="@{/resources/vendor/tgCube/css/libs/dataTables.tableTools.css}" />
-<!--/* Switch复选框按钮  修改是否可用用*/-->
-<link th:href="@{/resources/vendor/bootstrap/plugins/toggle/css/bootstrap-toggle.min.css}" rel="stylesheet" />
-<link th:href="@{/resources/vendor/webuploader/webuploader.css}" rel="stylesheet" />
 <!--/***** 当前页css  end *****/-->
 </head>
-<body class="theme-turquoise fixed-header fixed-leftmenu fixed-footer">
-	<div id="theme-wrapper">
-		<div th:replace="fragments/nav_admin">导航栏</div>
-		<div id="page-wrapper" class="container">
-			<div th:replace="fragments/menu_admin::menu(root=content,current=friendlink)">菜单栏</div>
-			<div id="content-wrapper">
-				<div th:replace="fragments/breadcrumbs_admin::breadcrumbs(parent=站点管理,current=友情链接)">面包屑栏</div>
-				<div class="main-box clearfix">
-					<header class="main-box-header clearfix">
-						<h2>友情链接管理</h2>
-					</header>
-					<div class="main-box-body clearfix">
-
-						<div class="row m-b-sm m-t-sm">
-							<div class="col-md-2">
-								<a th:href="@{/admin/m/ext/friendlink/add.gsp}" data-target="#commonWin" class="btn btn-primary btn-sm" type="button" data-toggle="modal"><i class="fa fa-plus-circle"></i>&nbsp;新增</a>
-							</div>
-						</div>
-						<br />
-						<table id="dataTable" cellspacing="0" width="100%" class="table table-striped table-hover ">
-							<thead>
-								<tr>
-									<th width="80" class="text-center">序号</th>
-									<th class="text-center">状态</th>
-									<th class="text-center">是否推荐</th>
-									<th class="text-center">链接类型</th>
-									<th class="text-center">链接名称</th>
-									<th class="text-center">电子邮箱</th>
-									<th class="text-center">网站地址</th>
-									<th class="text-center">描述</th>
-									<th width="90" class="text-center">操作</th>
-								</tr>
-							</thead>
-						</table>
-					</div>
-				</div>
-				<div th:replace="fragments/footer_admin">底部</div>
-			</div>
-		</div>
-	</div>
+<body>
+    <div class="layui-layout layui-layout-admin">
+        <div th:replace="fragments/nav_admin">导航栏</div>
+        <div th:replace="fragments/menu_admin::menu(parent=content,child=friendlink)">菜单栏</div>
+        <!--/*******内容*******/-->
+        <div class="layui-body">
+            <div class="layui-main">
+                <!--/***** 面包屑 *****/-->
+                <div class="layui-elem-quote" style="margin-top: 10px;">
+                    <span class="layui-breadcrumb"> <a><cite>内容管理</cite></a><a th:href="@{/admin/m/ext/friendlink/list.gsp}">友情链接</a><a><cite>列表</cite></a>
+                    </span>
+                </div>
+                <!--/*******操作*******/-->
+                <div class="layui-form-item">
+                    <blockquote class="layui-elem-quote layui-quote-nm">
+                        <div class="layui-inline">
+                            <div class="layui-input-inline">
+                                <a th:href="@{/admin/m/ext/friendlink/add.gsp}" class="layui-btn"><i class="layui-icon">&#xe61f;</i> 新增</a>
+                            </div>
+                        </div>
+                    </blockquote>
+                </div>
+                <!--/***** 列表 *****/-->
+                <table class="layui-table" lay-even="" lay-skin="row">
+                    <thead id="dataTable">
+                        <tr>
+                            <th style="width: 40px">#</th>
+                            <th>状态</th>
+                            <th>是否推荐</th>
+                            <th>链接类型</th>
+                            <th>链接名称</th>
+                            <th>电子邮箱</th>
+                            <th>网站地址</th>
+                            <th>描述</th>
+                            <th>操作</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr th:if="${friendlinkList.records == null or friendlinkList.records.size() == 0}">
+                            <td colspan="9" style="text-align: center;">暂时没有数据</td>
+                        </tr>
+                        <tr th:each="item,items:${friendlinkList.records}">
+                            <td th:text="${friendlinkList.pageSize*(friendlinkList.page-1)+items.index+1}" style="text-align: center;">序号</td>
+                            <td th:text="${item.enabled==1?'启用':'停用'}">状态</td>
+                            <td th:text="${item.recommend==1?'是':'否'}">是否推荐</td>
+                            <td th:text="${item.typeName}">链接类型</td>
+                            <td th:text="${item.flName}">链接名称</td>
+                            <td th:text="${item.flEmail}">电子邮箱</td>
+                            <td th:text="${item.flUrl}">网站地址</td>
+                            <td th:text="${item.description}">描述</td>
+                            <td style="text-align: center;"><a class="layui-btn layui-btn-small" th:href="@{/admin/m/ext/friendlink/edit_{id}.gsp(id=${item.id})}"><i
+                                    class="layui-icon">&#xe642;</i></a>
+                                <button class="layui-btn layui-btn-small layui-btn-normal" th:onclick="|deleted('${item.id}')|">
+                                    <i class="layui-icon">&#xe640;</i>
+                                </button></td>
+                        </tr>
+                    </tbody>
+                </table>
+                <div id="pageDiv"></div>
+            </div>
+        </div>
+        <div th:replace="fragments/footer_admin">底部版权信息等</div>
+    </div>
 </body>
 <div th:replace="fragments/import_js_admin">引入js</div>
 <!--/***** 当前页js start *****/-->
-<script th:src="@{/resources/vendor/tgCube/js/jquery.dataTables.js}"></script>
-<script th:src="@{/resources/vendor/tgCube/js/dataTables.fixedHeader.js}"></script>
-<script th:src="@{/resources/vendor/tgCube/js/dataTables.tableTools.js}"></script>
-<script th:src="@{/resources/vendor/tgCube/js/jquery.dataTables.bootstrap.js}"></script>
-<!--/* Switch复选框按钮  修改是否可用用*/-->
-<script th:src="@{/resources/vendor/bootstrap/plugins/toggle/js/bootstrap-toggle.min.js}"></script>
-<!--/* web uploader */-->
-<script th:src="@{/resources/vendor/webuploader/webuploader.js}"></script>
-<script th:src="@{/resources/js/common/formBuilder.js}"></script>
 <script th:inline="javascript">
     /*<![CDATA[*/
-    //表格
-    var myTable;
-    //表格列定义
-    var columnDefs = [ {
-        //第一列，用来显示序号
-        "searchable" : false,
-        "orderable" : false,
-        "targets" : 0
-    } ];
-    var columns = [ {
-        //第一列，用来显示序号
-        "data" : null
-    }, {
-        "data" : "enabled",
-        render : function(data, type, row, meta) {
-            if (data === 1) {
-                return '<input type="checkbox" data-size="mini" data-toggle="toggle" class="js-switch" data-on="启用" data-off="停用" checked="checked" onchange="myTable.changeEnabled(this,' + "\'" + row.id + "\'" + ')" /> ';
-            } else if (data !== 1) {
-                return '<input type="checkbox" data-size="mini" data-toggle="toggle" class="js-switch" data-on="启用" data-off="停用" onchange="myTable.changeEnabled(this, ' + "\'" + row.id + "\'" + ')" />';
+    var result = /*[[${friendlinkList}]]*/;
+    $(function(){
+        var option = {
+            listUrl : /*[[@{/admin/m/ext/friendlink/list.gsp?}]]*/,
+            totalPages : result.totalPages,
+            page : result.page,
+            param : {
             }
-        }
-    }, {
-        "data" : "recommend",
-        render : function(data, type, row, meta) {
-            if (data === 1) {
-                // var sf=row.id;
-                return '<a type="button" class="btn btn-xs btn-primary" onclick="recommend(this,\'' + row.id + '\',\'' + data + '\')"><i class="fa fa-thumbs-up text-danger"></i>&nbsp;荐</a>';
-            } else if (data !== 1) {
-                return '<a type="button" class="btn btn-xs btn-primary" onclick="recommend(this,\'' + row.id + '\',\'' + data + '\')"><i class="fa fa-thumbs-up"></i>&nbsp;荐</a>';
-            }
-        }
-    }, {
-        "data" : "typeName"
-    }, {
-        "data" : "flName"
-    }, {
-        "data" : "flEmail"
-    }, {
-        "data" : "flUrl"
-    }, {
-        "data" : "description"
-    }, {
-        "data" : null, //最后一列，操作按钮
-        render : function(data, type, row, meta) {
-            var editUrlPath = myTable.editUrl + row.id + ".gsp"; //修改地址
-            var result = '';
-            //修改按钮
-            result += ' <a href="'+editUrlPath+'" data-target="#commonWin" data-toggle="modal" class="btn btn-primary btn-xs"><i class="fa fa-pencil"></i></a>';
-            //删除按钮
-            result += ' <a href="#" type="button" onclick="myTable.deleteItem(\'' + row.id + '\')" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i></a>';
-            return result;
-        }
-    } ];
-    //ajax参数
-    var ajaxDataParamFun = function(d) {
-        d.simpleQueryParam = $('#simpleQueryParam').val(); //模糊查询
-    };
-    //推荐
-    function recommend(r, id, recommend) {
-        var parms = {
-            id : id,
-            recommend : recommend == 2 ? 1 : 2
-        }
-        var url = /*[[@{/admin/m/ext/friendlink/changeRecommend.gsp}]]*/'url';
-        tg_simpleAjaxPost(url, parms, myTable.refresh(), myTable.refresh())
-    }
+        };
+        tg_basePage(option);
+    })
 
-    //表格setting
-    var setting = {
-        listUrl : /*[[@{/admin/m/ext/friendlink/list.gsp}]]*/'url',
-        editUrl : /*[[@{/admin/m/ext/friendlink/edit_}]]*/'url',
-        deleteUrl : /*[[@{/admin/m/ext/friendlink/delete_}]]*/'url',
-        enableUrl : /*[[@{/admin/m/ext/friendlink/enable_}]]*/'url',
-        disableUrl : /*[[@{/admin/m/ext/friendlink/disable_}]]*/'url',
-        columnDefs : columnDefs, //表格列定义
-        columns : columns, //表格列
-        dataTableDiv : 'dataTable', //表格
-        ajaxDataParamFun : ajaxDataParamFun, //ajax参数
-        pageable : true, //是否分页
-        showIndexColumn : true, //是否显示第一列的索引列
-        enabledChange : true
-    };
-    //创建表格
-    myTable = new TG_Tabel.createNew(setting);
-    //加载完成后执行
-    $(function() {
-        //表格初始化
-        myTable.init();
-    });
+    var deleteUrl = /*[[@{/admin/m/ext/friendlink/delete_{id}.gsp}]]*/;
+    function deleted(id) {
+        tg_deleteItem(deleteUrl.replace('{id}',id), function(){
+            location.reload();
+        });
+    }
     /*]]>*/
 </script>
+<!--/***** 当前页js end *****/-->
 </html>
