--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/content/vote/add.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/content/vote/add.html
@@ -1,118 +1,124 @@
-<form th:action="@{/admin/m/ext/vote/add.gsp}" id="addOptionForm" role="form" class="form-horizontal" action="#" method="post">
-	<div class="modal-header">
-		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-		<h4 class="modal-title">新增投票信息</h4>
-	</div>
-	<div class="modal-body">
-		<div class="row">
-			<div class="col-md-12">
-				<div class="form-group">
-					<label class="col-md-2 control-label">投票标题<label class="text-danger">*</label>：</label>
-					<div class="col-md-10">
-                        <input name="title" placeholder="请输入投票标题" type="text" class="form-control" />
-                    </div>
-				</div>
-				<div class="form-group">
-					<label class="col-md-2 control-label">模　　式<label class="text-danger">*</label>：</label>
-					<div class="col-md-4">
-						<select class="form-control" name="voteMode">
-                             <option value="1">独立访客</option>
-                             <option value="2">独立IP</option>
-                             <option value="3">独立用户</option>
-                        </select>
-					</div>
-                    <label class="col-md-2 control-label">投票编码<label class="text-danger">*</label>：</label>
-					<div class="col-md-4">
-						<input name="codeNum" placeholder="请输入投票编码" type="text" class="form-control" />
-					</div>
-				</div>
-				<div class="form-group">
-                    <label class="col-md-2 control-label">开始时间<label class="text-danger">*</label>：</label>
-                    <div class="col-md-4">
-                        <div class="input-group date">
-                            <input readonly="readonly" id="startTime" name="startTime" type="text" class="form-control"/>
-                            <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-                        </div>
-                    </div>
-                    <label readonly="true" class="col-md-2 control-label">结束时间：</label>
-                    <div class="col-md-4">
-                        <div class="input-group date">
-                            <input name="endTime" readonly="readonly" type="text" class="form-control"/>
-                            <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-                        </div>
-                    </div>
+<!DOCTYPE html>
+<html lang="zh-cn" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<head>
+<title th:text="|#{customer.systemTitle}-内容管理-投票管理|">图灵谷</title>
+<div th:replace="fragments/head_admin">head</div>
+<!--/***** 当前页css  start *****/-->
+<!--/***** 当前页css  end *****/-->
+</head>
+<body>
+    <div class="layui-layout layui-layout-admin">
+        <div th:replace="fragments/nav_admin">导航栏</div>
+        <div th:replace="fragments/menu_admin::menu(parent=content,child=vote)">菜单栏</div>
+        <!--/*******内容*******/-->
+        <div class="layui-body">
+            <div class="layui-main">
+                <!--/***** 面包屑 *****/-->
+                <div class="layui-elem-quote" style="margin-top: 10px;">
+                    <span class="layui-breadcrumb"> <a><cite>内容管理</cite></a><a th:href="@{/admin/m/ext/vote/list.gsp}">投票管理</a><a><cite>新增</cite></a>
+                    </span>
                 </div>
-				<div class="form-group">
-					<label class="col-md-2 control-label">间隔天数<label class="text-danger">*</label>：</label>
-					<div class="col-md-4">
-						<input name="intervalDays" value="0" placeholder="请输入间隔天数" type="text" class="form-control" />
-					</div>
-					<label class="col-md-2 control-label">最多可选项<label class="text-danger">*</label>：</label>
-					<div class="col-md-4">
-						<input name="maxSelected" value="0" placeholder="请输入最多可选项" type="text" class="form-control" />
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-md-2 control-label">描　　述：</label>
-					<div class="col-md-10">
-						<textarea  class="form-control" placeholder="最多输入140字" name="description"></textarea>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="modal-footer">
-		<button class="btn btn-primary" type="submit">
-			<strong>提 交</strong>
-		</button>
-		<button type="button" class="btn btn-default" data-dismiss="modal">
-			<strong>关 闭</strong>
-		</button>
-	</div>
-</form>
+                <!--/*******操作*******/-->
+                <form th:action="@{/admin/m/ext/vote/add.gsp}" id="addForm" role="form" method="post" class="layui-form">
+                    <fieldset class="layui-elem-field layui-field-title">
+                        <legend>投票管理-新增</legend>
+                    </fieldset>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">投票标题：<span style="color: red">*</span></label>
+                        <div class="layui-input-block">
+                            <input type="text" name="title" required lay-verify="title" placeholder="请输入投票标题" autocomplete="off" class="layui-input">
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <div class="layui-inline">
+                            <label class="layui-form-label">模式：<span style="color: red">*</span></label>
+                            <div class="layui-input-inline">
+                                <select name="voteMode">
+                                    <option value="1">独立访客</option>
+                                    <option value="2">独立IP</option>
+                                    <option value="3">独立用户</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="layui-inline">
+                            <label class="layui-form-label">投票编码：<span style="color: red">*</span></label>
+                            <div class="layui-input-block">
+                                <input type="text" name="codeNum" required lay-verify="title" placeholder="请输入投票编码" autocomplete="off" class="layui-input">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <div class="layui-inline">
+                            <label class="layui-form-label">开始时间：<span style="color: red">*</span></label>
+                            <div class="layui-input-inline">
+                                <input type="text" name="startTime" lay-verify="date" placeholder="yyyy-mm-dd" autocomplete="off" class="layui-input" onclick="layui.laydate({elem: this})">
+                            </div>
+                        </div>
+                        <div class="layui-inline">
+                            <label class="layui-form-label">开始时间：</label>
+                            <div class="layui-input-block">
+                                <input type="text" name="endTime" lay-verify="date" placeholder="yyyy-mm-dd" autocomplete="off" class="layui-input" onclick="layui.laydate({elem: this})">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <div class="layui-inline">
+                            <label class="layui-form-label">间隔天数：<span style="color: red">*</span></label>
+                            <div class="layui-input-inline">
+                                <input type="number" name="intervalDays" required value="0" lay-verify="number" min="0" max="99" placeholder="请输入间隔天数" autocomplete="off" class="layui-input">
+                            </div>
+                        </div>
+                        <div class="layui-inline">
+                            <label class="layui-form-label">最多可选项：<span style="color: red">*</span></label>
+                            <div class="layui-input-block">
+                                <input type="number" name="maxSelected" required value="0" lay-verify="number" min="0" max="99" placeholder="请输入最多可选项" autocomplete="off" class="layui-input">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="layui-form-item layui-form-text">
+                        <label class="layui-form-label">描述：</label>
+                        <div class="layui-input-block">
+                            <textarea name="description" placeholder="最多输入140字" lay-verify="description" rows="3" class="layui-textarea"></textarea>
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <div class="layui-input-block">
+                            <button class="layui-btn" lay-submit="" lay-filter="submit">立即提交</button>
+                            <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div th:replace="fragments/footer_admin">底部版权信息等</div>
+    </div>
+</body>
+<div th:replace="fragments/import_js_admin">引入js</div>
+<!--/***** 当前页js start *****/-->
 <script th:inline="javascript">
-	$('.date').datepicker({
-	    todayBtn: "linked",
-	    keyboardNavigation: false,
-	    forceParse: false,
-	    initialDate : new Date(),
-	    altField: '#actualDate',
-	    calendarWeeks: true,
-	    autoclose: true
-	});
     /*<![CDATA[*/
-    $(function() {
-        $("#startTime").val(new Date().Format("yyyy-mm-dd"));
-        var rules = {
-        	title : {
-                required : true,
-                maxlength : 40
-            },
-            codeNum : {
-                required : true,
-                maxlength : 20,
-                minlength : 2
-            },
-            intervalDays:{
-                required : true,
-            	digits:true,
-            	max : 999,
-            	min : 1
-            },
-            maxSelected : {
-                required : true,
-            	digits:true,
-            	max : 20,
-            	min : 0
-            },
-            description : {
-            	maxlength : 140
+    var form = layui.form();
+    var $ = layui.jquery;
+  //自定义验证规则
+    var rules = {
+        title : function(value) {
+            if (value.length < 1 || value.length > 40) {
+                return '投票标题在1~20个字符之间';
             }
-        };
-        var messages = {
-        	
-        };
-        myTable.add('commonWin', 'addOptionForm', rules, messages);
-    });
+        },
+        codeNum : function(value){
+            if(value.length < 2 || value.length > 20) {
+                return '投票编码在2~20个字符之间';
+            }
+        },
+        description : function(value){
+            if(value.length > 140) {
+                return '描述不能超过140个字符';
+            }
+        }
+    };
+    form.verify(rules);
     /*]]>*/
 </script>
+<!--/***** 当前页js end *****/-->
+</html>
