--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/content/vote/list.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/content/vote/list.html
@@ -1,153 +1,99 @@
 <!DOCTYPE html>
 <html lang="zh-cn" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-<title th:text="|#{customer.systemTitle}-图灵谷-内容管理-投票管理|">图灵谷</title>
+<title th:text="|#{customer.systemTitle}-内容管理-投票管理|">图灵谷</title>
 <div th:replace="fragments/head_admin">head</div>
 <!--/***** 当前页css  start *****/-->
-<link rel="stylesheet" type="text/css" th:href="@{/resources/vendor/tgCube/css/libs/dataTables.fixedHeader.css}" />
-<link rel="stylesheet" type="text/css" th:href="@{/resources/vendor/tgCube/css/libs/dataTables.tableTools.css}" />
-<!--/* Switch复选框按钮  修改是否可用用*/-->
-<link th:href="@{/resources/vendor/bootstrap/plugins/toggle/css/bootstrap-toggle.min.css}" rel="stylesheet" />
-<link th:href="@{/resources/vendor/tgCube/css/libs/datepicker.css}" rel="stylesheet" />
 <!--/***** 当前页css  end *****/-->
 </head>
-<body class="theme-turquoise fixed-header fixed-leftmenu fixed-footer">
-	<div id="theme-wrapper">
-		<div th:replace="fragments/nav_admin">导航栏</div>
-		<div id="page-wrapper" class="container">
-			<div th:replace="fragments/menu_admin::menu(root=content,current=vote)">菜单栏</div>
-			<div id="content-wrapper">
-				<div th:replace="fragments/breadcrumbs_admin::breadcrumbs(parent=内容管理,current=投票管理)">面包屑栏</div>
-				<div class="main-box clearfix">
-					<header class="main-box-header clearfix">
-						<div class="row m-b-sm m-t-sm">
-							<div class="col-md-8">
-								<a th:href="@{/admin/m/ext/vote/add.gsp}" data-target="#commonWin" class="btn btn-primary btn-sm" type="button" data-toggle="modal"><i class="fa fa-plus"></i>&nbsp;新增</a>
-							</div>
-						</div>
-					</header>
-					<div class="main-box-body clearfix">
-						<table id="dataTable" cellspacing="0" width="100%" class="table table-striped table-hover ">
-							<thead>
-								<tr>
-									<th>#</th>
-									<th>状态</th>
-									<th>标题</th>
-									<th>编码</th>
-									<th>开始日期</th>
-									<th>结束日期</th>
-									<th>间隔天数</th>
-									<th>模式</th>
-									<th>总票数</th>
-									<th width="120">操作</th>
-								</tr>
-							</thead>
-						</table>
-					</div>
-				</div>
-				<div th:replace="fragments/footer_admin">底部</div>
-			</div>
-		</div>
-	</div>
+<body>
+    <div class="layui-layout layui-layout-admin">
+        <div th:replace="fragments/nav_admin">导航栏</div>
+        <div th:replace="fragments/menu_admin::menu(parent=content,child=vote)">菜单栏</div>
+        <!--/*******内容*******/-->
+        <div class="layui-body">
+            <div class="layui-main">
+                <!--/***** 面包屑 *****/-->
+                <div class="layui-elem-quote" style="margin-top: 10px;">
+                    <span class="layui-breadcrumb"> <a><cite>内容管理</cite></a><a th:href="@{/admin/m/ext/vote/list.gsp}">投票管理</a><a><cite>列表</cite></a>
+                    </span>
+                </div>
+                <!--/*******操作*******/-->
+                <div class="layui-form-item">
+                    <blockquote class="layui-elem-quote layui-quote-nm">
+                        <div class="layui-inline">
+                            <div class="layui-input-inline">
+                                <a th:href="@{/admin/m/ext/vote/add.gsp}" class="layui-btn"><i class="layui-icon">&#xe61f;</i> 新增</a>
+                            </div>
+                        </div>
+                    </blockquote>
+                </div>
+                <!--/***** 列表 *****/-->
+                <table class="layui-table" lay-even="" lay-skin="row">
+                    <thead id="dataTable">
+                        <tr>
+                            <th style="width: 40px">#</th>
+                            <th>状态</th>
+                            <th>标题</th>
+                            <th>编码</th>
+                            <th>开始日期</th>
+                            <th>结束日期</th>
+                            <th>间隔天数</th>
+                            <th>模式</th>
+                            <th>总票数</th>
+                            <th>操作</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr th:if="${voteList.records == null or voteList.records.size() == 0}">
+                            <td colspan="9" style="text-align: center;">暂时没有数据</td>
+                        </tr>
+                        <tr th:each="item,items:${voteList.records}">
+                            <td th:text="${voteList.pageSize*(voteList.page-1)+items.index+1}" style="text-align: center;">序号</td>
+                            <td th:text="${item.enabled==1?'启用':'停用'}">状态</td>
+                            <td th:text="${item.title}">标题</td>
+                            <td th:text="${item.codeNum}">编码</td>
+                            <td th:text="${item.startTime!=null?#dates.format(item.startTime,'yyyy-MM-dd'):''}">开始日期</td>
+                            <td th:text="${item.endTime!=null?#dates.format(item.endTime,'yyyy-MM-dd'):''}">结束日期</td>
+                            <td th:text="${item.intervalDays}">间隔天数</td>
+                            <td th:text="${item.voteMode==1?'独立访客':(item.voteMode==2?'独立IP':(item.voteMode==3?'独立用户':''))}">模式</td>
+                            <td th:text="${item.totalCount}">总票数</td>
+                            <td style="text-align: center;"><a class="layui-btn layui-btn-small" th:href="@{/admin/m/ext/vote/edit_{id}.gsp(id=${item.id})}"><i class="layui-icon">&#xe642;</i></a>
+                                <button class="layui-btn layui-btn-small layui-btn-normal" th:onclick="|deleted('${item.id}')|">
+                                    <i class="layui-icon">&#xe640;</i>
+                                </button></td>
+                        </tr>
+                    </tbody>
+                </table>
+                <div id="pageDiv"></div>
+            </div>
+        </div>
+        <div th:replace="fragments/footer_admin">底部版权信息等</div>
+    </div>
 </body>
 <div th:replace="fragments/import_js_admin">引入js</div>
 <!--/***** 当前页js start *****/-->
-<script th:src="@{/resources/vendor/tgCube/js/jquery.dataTables.js}"></script>
-<script th:src="@{/resources/vendor/tgCube/js/dataTables.fixedHeader.js}"></script>
-<script th:src="@{/resources/vendor/tgCube/js/dataTables.tableTools.js}"></script>
-<script th:src="@{/resources/vendor/tgCube/js/jquery.dataTables.bootstrap.js}"></script>
-<script th:src="@{/resources/vendor/bootstrap/plugins/bootstrap-datepicker.js}"></script>
-<!--/***** 当前页js end *****/-->
-<!--/* Switch复选框按钮  修改是否可用用*/-->
-<script th:src="@{/resources/vendor/bootstrap/plugins/toggle/js/bootstrap-toggle.min.js}"></script>
-<!--/* 模板引擎生成数据 */-->
 <script th:inline="javascript">
-/*<![CDATA[*/
-//表格
-var myTable;
-//表格列定义
-var editUrlPre= /*[[@{/admin/m/ext/vote/edit_}]]*/'url';
-var columnDefs = [ {
-    //第一列，用来显示序号
-    "searchable" : false,
-    "orderable" : false,
-    "targets" : 0
-} ];
-var columns = [ {
-    //第一列，用来显示序号
-    "data" : null
-},{
-	"data" : null,
-	render : function(data, type, row, meta){
-	   var result = "";
-	   if(row.enabled===1){
-	          return '<input type="checkbox" data-size="mini" data-toggle="toggle" class="js-switch" data-on="启用" data-off="停用" checked="checked" onchange="myTable.changeEnabled(this,' + "\'" + row.id + "\'" + ')" /> ';
-	   }else{
-	       return '<input type="checkbox" data-size="mini" data-toggle="toggle" class="js-switch" data-on="启用" data-off="停用" onchange="myTable.changeEnabled(this, ' + "\'" + row.id + "\'" + ')" />';
-	   }
-	}
-},{
-    "data" : "title"
-},{
-    "data" : "codeNum"
-},{
-    "data" : "startTime"
-},{
-    "data" : "endTime"
-},{
-    "data" : "intervalDays"
-},{
-    "data" : "voteMode",
-    render : function(data, type, row, meta){
-        if(data === 1){
-            return '<span class="text-success">独立访客</span>';
-        }else if(data === 2){
-            return '<span class="text-danger">独立IP</span>';
-        }else if(data === 3){
-            return '独立用户';
-        }
+    /*<![CDATA[*/
+    var result = /*[[${voteList}]]*/;
+    $(function(){
+        var option = {
+            listUrl : /*[[@{/admin/m/ext/vote/list.gsp?}]]*/,
+            totalPages : result.totalPages,
+            page : result.page,
+            param : {
+            }
+        };
+        tg_basePage(option);
+    })
+
+    var deleteUrl = /*[[@{/admin/m/ext/vote/delete_{id}.gsp}]]*/;
+    function deleted(id) {
+        tg_deleteItem(deleteUrl.replace('{id}',id), function(){
+            location.reload();
+        });
     }
-},{
-    "data" : "totalCount"
-},{
-    "data" : null, //最后一列，操作按钮
-    render : function(data, type, row, meta) {
-        var editUrlPath = myTable.editUrl + row.id + ".gsp"; //修改地址
-        var result = '';        
-        //修改按钮
-        result += ' <a href="'+editUrlPath+'" data-target="#commonWin" data-toggle="modal" class="btn btn-primary btn-xs"><i class="fa fa-pencil"></i></a>';
-        //删除按钮
-        result += ' <a href="#" type="button" onclick="myTable.deleteItem(\'' + row.id + '\')" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i></a>';    
-        return result;
-    } 
-} ];
-//ajax参数
-var ajaxDataParamFun = function(d) {
-};
-//表格setting
-var setting = {
-    listUrl : /*[[@{/admin/m/ext/vote/list.gsp}]]*/'url',
-    editUrl : /*[[@{/admin/m/ext/vote/edit_}]]*/'url',
-    deleteUrl : /*[[@{/admin/m/ext/vote/delete_}]]*/'url',
-    enableUrl : /*[[@{/admin/m/ext/vote/enable_}]]*/'url',
-    disableUrl : /*[[@{/admin/m/ext/vote/disable_}]]*/'url',
-    enabledChange : true, //修改是否可用
-    columnDefs : columnDefs, //表格列定义
-    columns : columns, //表格列
-    dataTableDiv : 'dataTable', //表格
-    ajaxDataParamFun : ajaxDataParamFun, //ajax参数
-    pageable : true, //是否分页
-    showIndexColumn : true, //是否显示第一列的索引列
-    enabledChange : true
-};
-//创建表格
-myTable = new TG_Tabel.createNew(setting);
-//加载完成后执行
-$(function() {
-    //表格初始化
-    myTable.init();
-});      
-/*]]>*/
+    /*]]>*/
 </script>
-<div th:replace="common/common_window::window(windowId=commonOptionWin)">公共弹出窗口</div>
+<!--/***** 当前页js end *****/-->
 </html>
