--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/model/fields.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/model/fields.html
@@ -1,169 +1,114 @@
-<div class="modal-header">
-	<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-	<h4 class="modal-title">字段管理</h4>
-</div>
-<div class="modal-body">
-	<div class="row">
-		<div id="paramInfoDiv">
-			<input name="ownerType" th:value="|${result.type}Model|" type="hidden" /> <input name="ownerId" th:value="${result.id}" type="hidden" />
-		</div>
-		<div class="col-md-12">
-			<a th:href="@{/admin/m/base/customField/add.gsp}" data-target="#customFieldWin" class="btn btn-primary btn-xs" type="button" data-toggle="modal"><i class="fa fa-plus"></i>&nbsp;新增</a>
-		</div>
-		<div class="col-md-6">
-			<div class="ibox float-e-margins">
-				<table id="modelFieldsTable" class="table table-striped table-hover">
-					<thead>
-						<tr>
-							<th>字段名称</th>
-							<th>字段标签</th>
-							<th>字段类型</th>
-							<th width="80">操作</th>
-						</tr>
-					</thead>
-				</table>
+<!DOCTYPE html>
+<html lang="zh-cn" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<head>
+<title th:text="|#{customer.systemTitle}-图灵谷-全局配置-全局配置|">图灵谷</title>
+<div th:replace="fragments/head_admin">head</div>
+</head>
+<body>
+	<div class="layui-layout layui-layout-admin">
+		<div th:replace="fragments/nav_admin">导航栏</div>
+		<div th:replace="fragments/menu_admin::menu(parent=gconfig,child=model)">菜单栏</div>
+		<div class="layui-body">
+			<div class="layui-main">
+				<!--/***** 面包屑 *****/-->
+				<div class="layui-elem-quote" style="margin-top: 10px;">
+					<span class="layui-breadcrumb"> <a><cite>全局配置</cite></a> <a th:href="@{/admin/m/base/model/list.gsp}">模型配置</a> <a><cite>列表</cite></a>
+					</span>
+				</div>
+				<blockquote class="layui-elem-quote layui-quote-nm" style="color: #FF5722">
+					<i class="layui-icon">&#xe60b;</i>字段管理
+				</blockquote>
+				<input name="ownerType" th:value="|${result.type}Model|" type="hidden" /> <input name="ownerId" th:value="${result.id}" type="hidden" />
+				<blockquote class="layui-elem-quote layui-quote-nm">
+					<div class="layui-inline">
+						<div class="layui-input-inline">
+							<a th:href="@{/admin/m/base/customField/add.gsp}" class="layui-btn">新增</a>
+						</div>
+					</div>
+				</blockquote>
+
+				<div class="layui-form-item">
+					<div class="layui-inline" style="width: 45%;">
+						<fieldset class="layui-elem-field layui-field-title">
+							<legend>已存在字段</legend>
+						</fieldset>
+						<table id="cusTable" class="layui-table" lay-even="" lay-skin="row">
+							<thead>
+								<tr>
+									<th>字段名称</th>
+									<th>字段标签</th>
+									<th>字段类型</th>
+									<th style="width: 90px;">操作</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr th:if="${cusList == null or cusList.size() == 0}">
+									<td colspan="4" style="text-align: center;">暂时没有数据</td>
+								</tr>
+								<tr th:each="item,itemStat:${cusList}">
+									<td name="fieldName" th:text="${item.fieldName}" style="text-align: center;"></td>
+									<td th:text="${item.fieldLabel}" style="text-align: center;"></td>
+									<td style="text-align: center;"><label th:if="${item.type==1}">文本输入框</label> <label th:if="${item.type==2}">日期输入框</label> <label th:if="${item.type==3}">单选框</label> <label th:if="${item.type==4}">多选框</label> <label th:if="${item.type==5}">文本域</label> <label th:if="${item.type==6}">文本编辑器</label>
+										<label th:if="${item.type==7}">图片上传</label> <label th:if="${item.type==8}">图片集上传</label> <label th:if="${item.type==9}">视频上传</label> <label th:if="${item.type==10}">附件上传</label> <label th:if="${item.type==11}">文库上传</label> <label th:if="${item.type==12}">属性控件</label></td>
+									<td><a th:href="|@{/admin/m/base/customField/edit_}${item.id}.gsp|" class="layui-btn layui-btn-small"> <i class="layui-icon"></i></a><a th:onclick="|del('${item.id}')|" class="layui-btn layui-btn-normal layui-btn-small"> <i class="layui-icon"></i></a></td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+					<div class="layui-inline" style="width: 45%;">
+						<fieldset class="layui-elem-field layui-field-title">
+							<legend>可添加字段</legend>
+						</fieldset>
+						<table id="sysTable" class="layui-table" lay-even="" lay-skin="row">
+							<thead>
+								<tr>
+									<th style="width: 40px;">操作</th>
+									<th>字段名称</th>
+									<th>字段标签</th>
+									<th>字段类型</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr th:if="${sysList == null or sysList.size() == 0}">
+									<td colspan="4" style="text-align: center;">暂时没有数据</td>
+								</tr>
+								<tr th:each="item,itemStat:${sysList}">
+									<td><a class="layui-btn layui-btn-small layui-btn-danger" th:onclick="|addSysField('${item.fieldName}')|"><i class="layui-icon">&#xe603;</i></a>
+									<td name="fieldName" th:text="${item.fieldName}" style="text-align: center;"></td>
+									<td th:text="${item.fieldLabel}" style="text-align: center;"></td>
+									<td style="text-align: center;"><label th:if="${item.type==1}">文本输入框</label> <label th:if="${item.type==2}">日期输入框</label> <label th:if="${item.type==3}">单选框</label> <label th:if="${item.type==4}">多选框</label> <label th:if="${item.type==5}">文本域</label> <label th:if="${item.type==6}">文本编辑器</label>
+										<label th:if="${item.type==7}">图片上传</label> <label th:if="${item.type==8}">图片集上传</label> <label th:if="${item.type==9}">视频上传</label> <label th:if="${item.type==10}">附件上传</label> <label th:if="${item.type==11}">文库上传</label> <label th:if="${item.type==12}">属性控件</label></td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</div>
 			</div>
 		</div>
-		<div class="col-md-6">
-			<div class="ibox float-e-margins">
-				<table id="sysModelFieldsTable" class="table table-striped table-hover">
-					<thead>
-						<tr>
-							<th>操作</th>
-							<th>字段名称</th>
-							<th>字段标签</th>
-							<th>字段类型</th>
-						</tr>
-					</thead>
-				</table>
-			</div>
-		</div>
+		<div th:replace="fragments/footer_admin">底部</div>
 	</div>
-</div>
-<div class="modal-footer">
-	<button type="button" class="btn btn-default" data-dismiss="modal">
-		<strong>关 闭</strong>
-	</button>
-</div>
+</body>
+<div th:replace="fragments/import_js_admin">引入js</div>
+</html>
 <script th:inline="javascript">
-    /*<![CDATA[*/
-    var fieldTypes = [ '', '文本输入框', '日期输入框', '单选框', '多选框', '文本域', '文本编辑器', '图片上传', '图片集上传', '视频上传', '附件上传', '文库上传', '属性控件' ];
-    //表格
-    var modelTable;
-    var sysFieldsTable;
-    //表格列定义
-    var columnDefs2 = [ {
-        //第一列，用来拖拽
-        "searchable" : false,
-        "orderable" : false,
-        "targets" : 0
-    } ];
-
-    //ajax参数
-    var ajaxDataParamFun1 = function(d) {
-        d.ownerType = /*[[|${result.type}Model|]]*/'';
-        d.ownerId = /*[[${result.id}]]*/'';
-    };
-    //ajax参数
-    var ajaxDataParamFun2 = function(d) {
-        d.modelType = /*[[|${result.type}Model|]]*/'';
-        d.modelId = /*[[${result.id}]]*/'';
-    };
-
-    var columns1 = [ {
-        "data" : "fieldName",
-        render : function(data, type, row, meta) {
-            var str = "";
-            if (row.type == 1 || row.type == 3 || row.type == 4 || row.type == 5 || row.type == 7 || row.type == 8 || row.type == 9 || row.type == 10 || row.type == 11) {
-                str = "cus_str_";
-            } else if (row.type == 2) {
-                str = "cus_date_";
-            } else {
-                str = "cus_blob_";
-            }
-            return data.replace(str, "");
-        }
-    }, {
-        "data" : "fieldLabel"
-    }, {
-        "data" : "type",
-        render : function(data, type, row, meta) {
-            return fieldTypes[data];
-        }
-    }, {
-        "data" : null, //最后一列，操作按钮
-        "class" : "text-center",
-        render : function(data, type, row, meta) {
-            var editUrlPre = /*[[@{/admin/m/base/customField/edit_{id}.gsp}]]*/'url';
-            var result = '<a href="' + editUrlPre.replace("{id}", row.id) + '" data-target="#customFieldWin" class="btn btn-primary btn-xs" type="button" data-toggle="modal"><i class="fa fa-edit"></i></a>';
-            result += ' <button class="btn btn-warning btn-xs" type="button" onclick="modelTable.deleteItem(\'' + row.id + '\')"><i class="fa fa-trash-o"></i></button>';
-            return result;
-        }
-    } ];
-
-    var columns2 = [ {
-        "data" : null, //最后一列，操作按钮
-        "class" : "text-center",
-        render : function(data, type, row, meta) {
-            var result = '<button class="btn btn-xs" type="button" onclick="addSysField(\'' + row.fieldName + '\')"><i class="fa fa-chevron-left"></i></button>';
-            return result;
-        }
-    }, {
-        "data" : "fieldName"
-    }, {
-        "data" : "fieldLabel"
-    }, {
-        "data" : "type",
-        render : function(data, type, row, meta) {
-            return fieldTypes[data];
-        }
-    } ];
-
-    //表格setting
-    var setting = {
-        listUrl : /*[[@{/admin/m/base/customField/findFieldByModel.gsp}]]*/'url',
-        columnDefs : columnDefs2, //表格列定义
-        columns : columns1, //表格列
-        dataTableDiv : 'modelFieldsTable', //表格
-        pageable : false, //是否分页
-        ajaxDataParamFun : ajaxDataParamFun1, //ajax参数
-        showIndexColumn : false, //是否显示第一列的索引列
-        enabledChange : false
-    };
-    //创建表格
-    modelTable = new TG_Tabel.createNew(setting);
-
-    //表格setting
-    var setting2 = {
-        listUrl : /*[[@{/admin/m/base/customField/findSysField.gsp}]]*/'url',
-        columnDefs : columnDefs2, //表格列定义
-        columns : columns2, //表格列
-        dataTableDiv : 'sysModelFieldsTable', //表格
-        pageable : false, //是否分页
-        ajaxDataParamFun : ajaxDataParamFun2, //ajax参数
-        showIndexColumn : false, //是否显示第一列的索引列
-        enabledChange : false
-    };
-    //创建表格
-    sysFieldsTable = new TG_Tabel.createNew(setting2);
-
-    $(function() {
-        //初始化表格
-        modelTable.init();
-        sysFieldsTable.init();
-    });
-
-    // 删除
-    var deleteUrl = /*[[@{/admin/m/base/customField/delete_{id}.gsp}]]*/'url';
-    modelTable.deleteItem = function(id) {
-        var deleteUrlPath = deleteUrl.replace("{id}", id);
-        tg_dleteItem(deleteUrlPath, function() {
-            modelTable.refresh();
-            sysFieldsTable.refresh();
-            tg_alertSuccess();
-        });
+    /*<![CDATA[*/ 
+    //替换fieldName
+    //var cusList = /*[[${cusList}]]*/;
+    /*for(i=0;i<cusList.length;i++){
+        var type = cusList[i].type;
+        var str = "";
+        if (type == 1 || type == 3 || type == 4 || type == 5 || type == 7 || type == 8 || type == 9 || type == 10 || type == 11) {
+            str = "cus_str_";
+        } else if (type == 2) {
+            str = "cus_date_";
+        } else {
+            str = "cus_blob_";
+        }  
     }
-
+    var fieldNameVal = $('#cusTable td[name="fieldName"]').val().replace(str, "");
+    $('#cusTable td[name="fieldName"]').val(fieldNameVal);
+    fieldNameVal = $('#cusTable td[name="fieldName"]').val().replace(str, ""); */
+    //将右侧添加到左侧
     function addSysField(fieldName) {
         var url = /*[[@{/admin/m/base/customField/addSysField.gsp}]]*/'url';
         var parms = {
@@ -172,9 +117,15 @@
             ownerId : /*[[${result.id}]]*/'ownerId'
         }
         tg_simpleAjaxPost(url, parms, function() {
-            modelTable.refresh();
-            sysFieldsTable.refresh();
+            location.reload(); 
         });
+    }
+    
+    var deleteUrl = /*[[@{/admin/m/base/customField/delete_{id}.gsp}]]*/;
+    function del(id){
+        tg_deleteItem(deleteUrl.replace('{id}',id), function(){
+            location.reload();
+        });       
     }
     /*]]>*/
 </script>
