--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/model/editField.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/model/editField.html
@@ -56,13 +56,13 @@
 					<div class="layui-form-item">
 						<label class="layui-form-label">字段标签：<span style="color: red">*</span></label>
 						<div class="layui-input-block">
-							<input name="fieldLabel" th:field="*{fieldLabel}" placeholder="请输入字段标签" required layui-verify="fieldLabel" type="text" class="layui-input" />
+							<input name="fieldLabel" th:field="*{fieldLabel}" placeholder="请输入字段标签" required lay-verify="fieldLabel" type="text" class="layui-input" />
 						</div>
 					</div>
 					<div class="layui-form-item">
 						<label class="layui-form-label">字段名称：<span style="color: red">*</span></label>
 						<div class="layui-input-block">
-							<input th:if="${result.innerType==2}" th:field="*{fieldName}" type="hidden" /><input th:disabled="${result.innerType==2}" th:field="${result.fieldName}" placeholder="请输入字段名称" type="text" class="layui-input" />
+							<input th:if="${result.innerType==2}" th:field="*{fieldName}" type="hidden" /><input th:disabled="${result.innerType==2}" th:field="${result.fieldName}" lay-verify="fieldName" placeholder="请输入字段名称" type="text" class="layui-input" />
 						</div>
 					</div>
 					<div class="layui-form-item">
@@ -74,25 +74,25 @@
 					<div class="layui-form-item">
 						<label class="layui-form-label">默认值：</label>
 						<div class="layui-input-block">
-							<input name="fieldDefaultValue" th:field="*{fieldDefaultValue}" placeholder="请输入默认值" layui-verify="fieldDefaultValue" type="text" class="layui-input" />
+							<input name="fieldDefaultValue" th:field="*{fieldDefaultValue}" placeholder="请输入默认值" lay-verify="fieldDefaultValue" type="text" class="layui-input" />
 						</div>
 					</div>
 					<div class="layui-form-item">
 						<label class="layui-form-label">最大长度：</label>
 						<div class="layui-input-block">
-							<input name="fieldMaxLength" th:field="*{fieldMaxLength}" placeholder="请输入最大长度" layui-verify="fieldMaxLength" type="text" class="layui-input" />
+							<input name="fieldMaxLength" th:field="*{fieldMaxLength}" placeholder="请输入最大长度" lay-verify="fieldMaxLength" type="text" class="layui-input" />
 						</div>
 					</div>
 					<div class="layui-form-item">
 						<label class="layui-form-label">提示信息：</label>
 						<div class="layui-input-block">
-							<input name="prompt" th:field="*{prompt}" placeholder="请输入提示信息" type="text" layui-verify="prompt" class="layui-input" />
+							<input name="prompt" th:field="*{prompt}" placeholder="请输入提示信息" type="text" lay-verify="prompt" class="layui-input" />
 						</div>
 					</div>
 					<div class="layui-form-item" id="checkboxOptionsDiv" style="display: none">
 						<label class="layui-form-label">可选项：</label>
 						<div class="layui-input-block">
-							<textarea name="checkboxOptions" th:field="*{checkboxOptions}" th:disabled="${result.type!=3 and result.type!=4}" layui-verify="checkboxOptions" placeholder="请输入可选项" class="layui-textarea" lay-verify="description" type="text" maxlength="150"></textarea>
+							<textarea name="checkboxOptions" th:field="*{checkboxOptions}" th:disabled="${result.type!=3 and result.type!=4}" lay-verify="checkboxOptions" placeholder="请输入可选项" class="layui-textarea" type="text" maxlength="150"></textarea>
 						</div>
 					</div>
 					<div class="layui-form-item">
